Updated for Vignette 8.2 upgrade.
git-svn-id: file:///opt/mount/casfw/spf-git-migration/spf.svn/source/branches/spf-3.0@5376 fbe1f26e-0b55-418f-9102-102d79b04d0f